Added more unit tests for hotel service